<resources>
    <string name="app_name">auth_prj</string>

    <string name="word_login">로그인</string>
    <string name="word_logout">로그아웃</string>
    <string name="word_register">회원가입</string>
    <string name="word_done">완료</string>
    <string name="word_id">아이디</string>
    <string name="word_password">비밀번호</string>
    <string name="word_password_check">비밀번호 확인</string>
    <string name="word_nickname">닉네임</string>

    <string name="txt_done_signup">회원가입이 완료되었습니다.</string>
    <string name="txt_mr">님</string>
    <string name="txt_welcome">환영합니다 ! :)</string>

    <string name="txt_menu_user_management">사용자 관리</string>
    <string name="txt_use_switch_to_change_user_type">토글 버튼을 이용해 관리자 권한을 ON할 수 있습니다.</string>
    <string name="txt_complete_change">권한이 변경되었습니다.</string>


    <string name="hint_input_id">아이디를 입력하세요.</string>
    <string name="hint_input_password">비밀번호를 입력하세요.</string>
    <string name="hint_input_pssword_check">비밀번호를 다시 한 번 입력하세요.</string>
    <string name="hint_input_nickname">닉네임을 입력하세요.</string>

    <string name="error_password_check">비밀번호와 비밀번호 확인이 일치하지 않습니다.</string>
</resources>