<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="14dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2">

        <TextView
            style="@style/TextView.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:text="@string/word_register" />

        <TextView
            style="@style/TextView.Field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="50dp"
            android:text="@string/word_id" />

        <EditText
            android:id="@+id/edt_id"
            style="@style/TextView.Editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:background="@drawable/bg_editor"
            android:hint="@string/hint_input_id"
            android:maxLines="1"
            android:singleLine="true"
            android:textColorHint="@color/grey_500" />

        <TextView
            style="@style/TextView.Field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="15dp"
            android:text="@string/word_nickname" />

        <EditText
            android:id="@+id/edt_nickname"
            style="@style/TextView.Editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:background="@drawable/bg_editor"
            android:hint="@string/hint_input_nickname"
            android:maxLines="1"
            android:singleLine="true"
            android:textColorHint="@color/grey_500" />

        <TextView
            style="@style/TextView.Field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="15dp"
            android:text="@string/word_password" />

        <EditText
            android:id="@+id/edt_pw"
            style="@style/TextView.Editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:background="@drawable/bg_editor"
            android:hint="@string/hint_input_password"
            android:maxLines="1"
            android:singleLine="true"
            android:textColorHint="@color/grey_500" />

        <TextView
            style="@style/TextView.Field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="15dp"
            android:text="@string/word_password_check" />

        <EditText
            android:id="@+id/edt_pw_chk"
            style="@style/TextView.Editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:background="@drawable/bg_editor"
            android:hint="@string/hint_input_pssword_check"
            android:maxLines="1"
            android:singleLine="true"
            android:textColorHint="@color/grey_500" />

        <Button
            android:id="@+id/btn_done"
            style="@style/Button.Main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:background="@drawable/bg_button"
            android:text="@string/word_done" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>